--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://CalvinJamesHeath.github.io/sanid",
+  "homepage": ".",
   "name": "sanid",
   "version": "0.1.0",
   "private": true,
