--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "emailjs-com": "^2.6.4",
     "jquery": "^3.5.1",
     "react": "^16.8.1",
     "react-bootstrap": "^1.4.0",
