--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.8.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.8.1",
+    "react-responsive-carousel": "^3.2.11",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "web-vitals": "^0.2.4"
